tests/data/placebo/test_glue_route_table_filter/glue.GetConnections_1.json
{
    "status_code": 200,
    "data": {
        "ConnectionList": [
            {
                "Name": "test",
                "ConnectionType": "JDBC",
                "ConnectionProperties": {
                    "JDBC_CONNECTION_URL": "jdbc:mysql://database-3-instance-1.cz6wy8cci3uf.us-east-1.rds.amazonaws.com:3306/test",
                    "JDBC_ENFORCE_SSL": "true",
                    "PASSWORD": "test",
                    "USERNAME": "admin"
                },
                "PhysicalConnectionRequirements": {
                    "SubnetId": "subnet-3a334610",
                    "SecurityGroupIdList": [
                        "sg-6c7fa917"
                    ],
                    "AvailabilityZone": "us-east-1d"
                },
                "CreationTime": {
                    "__class__": "datetime",
                    "year": 2020,
                    "month": 5,
                    "day": 1,
                    "hour": 14,
                    "minute": 56,
                    "second": 0,
                    "microsecond": 176000
                },
                "LastUpdatedTime": {
                    "__class__": "datetime",
                    "year": 2020,
                    "month": 5,
                    "day": 1,
                    "hour": 14,
                    "minute": 56,
                    "second": 0,
                    "microsecond": 176000
                }
            }
        ],
        "ResponseMetadata": {}
    }
}
